# SynapseChamber

./: .env.example  .githubconfig.json  .gitignore  .replit  AI_TestSync.txt  AutoSyncBridge.ps1  MIGRATION_GUIDE.txt  advanced_memory_system.py  agent_system.py  ai_controller.py  ai_conversation_manager.py  analytics_system.py  app.py  assistant_chatbot.py  auto_push.ps1  bridge_test_20251016_163115.txt  browser_automation.py  captcha_solver.py  connection_test.txt  gamification_system.py  main.py  memory_system.py  models.py  package-lock.json  package.json  pyproject.toml  recommendation_engine.py  replit.md  replit.nix  requirements.txt  self_training_system.py  sync_log.txt  system_performance_monitor.py  training_engine.py
attached_assets/: Pasted--2-NEXT-CORE-UPGRADES-TOP-PRIORITY-To-unlock-voice-text-AI-comms-super-brain-mode-these--1746714414687.txt  Pasted--Synapse-Chamber-Next-Directives-to-Guide-Replit-Here-s-how-to-brief-Replit-on-the-next-steps-fram-1746463690662.txt  Pasted--YOUR-GOAL-Build-a-dev-environment-like-Replit-but-tailor-made-for-the-Synapse-Chamber-AutoDev--1746558363214.txt  Pasted-1-now-we-need-to-make-this-AI-talk-What-s-needed-to-make-it-talk-Define-the-control-loop--1759563982359_1759563982361.txt  Pasted-PRIORITY-ISSUE-SOLUTIONS-With-Deadly-Precision-1-Chrome-Driver-Initialization-Errors-Problem-Un-1746596189968.txt  Pasted-i-want-a-synapse-chamber-to-help-train-my-agent-Autodev-the-synapse-chamber-will-have-the-follo-1746460067255.txt  (+1 more)
data/: conversation_1.json  conversation_10.json  conversation_101.json  conversation_104.json  (+59 more)
(+46 files in other folders)
